perf: AppCDS + install-time JIT pre-warm drop cold 100M to 2.32 s (iter#09)
Two orthogonal low-risk levers on top of iter#08 (e411ebfd1, 2.68 s median).

Lever 1 — AppCDS (Application Class-Data Sharing): runtime JVM flag that
pre-loads the class archive, eliminating ~150-300 ms of class-init work
from the cold-wall window. No Java change — harness-side orchestration
with -XX:SharedArchiveFile + -Xshare:auto over a pre-dumped archive.
Archive must be built against jar-based classpath (exploded dirs rejected)
and the runtime module set must exactly match dump-time, including the
jdk.internal.vm.ci module that -XX:-UseJVMCICompiler injects.

Lever 2 — install-time JIT pre-warm: new private method
ProjectionIndexRegistry.prewarmJitForHandle fired once per registry key
on first install. Iterates a 2-leaf subList of the actual installed
payloads under every method-shape the bench queries hit (numeric GT,
numeric BETWEEN, boolean EQ, numeric+boolean conjunction, group-by
empty-preds, group-by boolean EQ + STRING_DICT). Default 200 iters;
tune via -Dsirix.projection.prewarmJit.iters, disable with
-Dsirix.projection.prewarmJit=false. Drains first-call C2 tier-up
variance (e.g. compoundAndFilterCount 1.05 ms → 0.53 ms observed).

Measurement (10 verified-cold runs per variant, interleaved):
  iter#08 baseline:                         median 2.676 s  mean 2.672 s
  iter#08 + jar CP only:                    median 2.699 s  mean 2.768 s
  iter#08 + AppCDS only:                    median 2.389 s  mean 2.476 s
  iter#09 full (AppCDS + prewarm=200):      median 2.319 s  mean 2.305 s

Δ baseline → iter#09 full: -0.357 s (-13.3 %) median, -0.367 s (-13.7 %) mean.

Native PGO re-measurement: existing iter#08-epoch binary 5-run median
2.70 s. For the first time in the campaign the JVM cold path beats
native PGO — campaign pivot from native to JVM as the production cold
configuration until graal#13377 (MemorySegment intrinsic gap) fixes
the native hydrate tax.

Tests: new ProjectionInd